results datasets created

--- a/dos results ver 1/dataset fetch/2-fft-malicious-n-0-10-m-14.ipynb
+++ b/dos results ver 1/dataset fetch/2-fft-malicious-n-0-10-m-14.ipynb
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,34 +904,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5118"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['packet_address'].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5118\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(packarr))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "650811\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(packchunk))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -944,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,34 +989,391 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "timestamp               0\n",
+       "router                  0\n",
+       "outport                 0\n",
+       "inport                  0\n",
+       "cache_coherence_type    0\n",
+       "flit_id                 0\n",
+       "flit_type               0\n",
+       "vnet                    0\n",
+       "vc                      0\n",
+       "src_ni                  0\n",
+       "src_router              0\n",
+       "dst_ni                  0\n",
+       "dst_router              0\n",
+       "traversal_id            0\n",
+       "hop_count               0\n",
+       "current_hop             0\n",
+       "hop_percentage          0\n",
+       "enqueue_time            0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "timestamp                 int64\n",
+       "router                    int64\n",
+       "outport                   int64\n",
+       "inport                    int64\n",
+       "cache_coherence_type      int64\n",
+       "flit_id                   int64\n",
+       "flit_type                 int64\n",
+       "vnet                      int64\n",
+       "vc                        int64\n",
+       "src_ni                    int64\n",
+       "src_router                int64\n",
+       "dst_ni                    int64\n",
+       "dst_router                int64\n",
+       "traversal_id              int64\n",
+       "hop_count                 int64\n",
+       "current_hop               int64\n",
+       "hop_percentage          float64\n",
+       "enqueue_time              int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>router</th>\n",
+       "      <th>outport</th>\n",
+       "      <th>inport</th>\n",
+       "      <th>cache_coherence_type</th>\n",
+       "      <th>flit_id</th>\n",
+       "      <th>flit_type</th>\n",
+       "      <th>vnet</th>\n",
+       "      <th>vc</th>\n",
+       "      <th>src_ni</th>\n",
+       "      <th>src_router</th>\n",
+       "      <th>dst_ni</th>\n",
+       "      <th>dst_router</th>\n",
+       "      <th>traversal_id</th>\n",
+       "      <th>hop_count</th>\n",
+       "      <th>current_hop</th>\n",
+       "      <th>hop_percentage</th>\n",
+       "      <th>enqueue_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>15</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>19</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   timestamp  router  outport  inport  cache_coherence_type  flit_id  \\\n",
+       "0          7       0        2       0                     1        1   \n",
+       "1          7      10        2       0                     1        1   \n",
+       "2          7      14        2       0                     1        1   \n",
+       "3         11      15        3       4                     1        1   \n",
+       "4         11      11        3       4                     1        1   \n",
+       "5         11       1        2       4                     1        1   \n",
+       "6         15       2        2       4                     1        1   \n",
+       "7         15       7        0       1                     1        1   \n",
+       "8         15      11        3       1                     1        1   \n",
+       "9         19       7        0       1                     1        1   \n",
+       "\n",
+       "   flit_type  vnet  vc  src_ni  src_router  dst_ni  dst_router  traversal_id  \\\n",
+       "0          4     3   9       0           0      23           7             0   \n",
+       "1          4     3   9      10          10      23           7             1   \n",
+       "2          4     3   9      14          14      23           7             2   \n",
+       "3          4     3   9      14          14      23           7             2   \n",
+       "4          4     3   9      10          10      23           7             1   \n",
+       "5          4     3   9       0           0      23           7             0   \n",
+       "6          4     3   9       0           0      23           7             0   \n",
+       "7          4     3   9      10          10      23           7             1   \n",
+       "8          4     3   9      14          14      23           7             2   \n",
+       "9          4     3  10      14          14      23           7             2   \n",
+       "\n",
+       "   hop_count  current_hop  hop_percentage  enqueue_time  \n",
+       "0          4            0        0.000000             4  \n",
+       "1          2            0        0.000000             4  \n",
+       "2          3            0        0.000000             4  \n",
+       "3          3            1        0.333333             8  \n",
+       "4          2            1        0.500000             8  \n",
+       "5          4            1        0.250000             8  \n",
+       "6          4            2        0.500000            12  \n",
+       "7          2            2        1.000000            12  \n",
+       "8          3            2        0.666667            12  \n",
+       "9          3            3        1.000000            16  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
