dataset location change

--- a/dos results ver 1/router fetch/wat-r1-good.ipynb
+++ b/dos results ver 1/router fetch/wat-r1-good.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (<ipython-input-5-c5bbb92e89de>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-c5bbb92e89de>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    df1 = pd.read_csv('C:\\Users\\DELL\\Documents\\GitHub\\nocml\\dos results ver 1\\dataset\\2-fft-normal-n-0-5-data.csv')\u001b[0m\n\u001b[1;37m                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
    "source": [
-    "df = pd.read_csv('wat-good.csv')\n",
-    "df = df.loc[df['router'] == 1]\n",
-    "df = df.drop(columns=['router'])\n",
-    "df.to_csv('wat-r1-good.csv',index=False)"
+    "df1 = pd.read_csv('2-fft-normal-n-0-3-data.csv')\n",
+    "df1 = pd.read_csv('2-fft-normal-n-0-5-data.csv')\n",
+    "df1 = pd.read_csv('\\2-fft-normal-n-0-10-data.csv')\n",
+    "df1 = pd.read_csv('C:\\Users\\DELL\\Documents\\GitHub\\nocml\\dos results ver 1\\dataset\\2-fft-normal-n-0-12-data.csv')\n",
+    "df1 = pd.read_csv('C:\\Users\\DELL\\Documents\\GitHub\\nocml\\dos results ver 1\\dataset\\2-fft-normal-n-0-15-data.csv')"
    ]
   },
   {
