--- a/dos results ver 2/8-fft-malicious-n-0-3-5-7-8-10-12-15-m-1-2-13-11.ipynb
+++ b/dos results ver 2/8-fft-malicious-n-0-3-5-7-8-10-12-15-m-1-2-13-11.ipynb
@@ -559,7 +559,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2009f79b908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22c0fd09a88>"
       ]
      },
      "execution_count": 6,
@@ -591,7 +591,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x200a324d848>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22c11e43e88>"
       ]
      },
      "execution_count": 7,
@@ -623,7 +623,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x200a33387c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22c77822148>"
       ]
      },
      "execution_count": 8,
@@ -655,7 +655,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x200a3401788>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22c11ff3d88>"
       ]
      },
      "execution_count": 9,
@@ -687,7 +687,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x200a3488f88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22c120abf08>"
       ]
      },
      "execution_count": 10,
@@ -719,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x200a354c808>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22c1215ed88>"
       ]
      },
      "execution_count": 11,
