--- a/dos results ver 1/router fetch/wat_r1_model_v2.ipynb
+++ b/dos results ver 1/router fetch/wat_r1_model_v2.ipynb
@@ -4983,7 +4983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -4993,7 +4993,20 @@
     "id": "98SaSpy9Hg2q",
     "outputId": "80afe400-1d79-4e48-c67e-1053630bd1fd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "                     metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
+       "                     weights='uniform')"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#KNeighborsClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
@@ -5003,7 +5016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -5016,7 +5029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -5026,16 +5039,7 @@
     "id": "PfFcDeasHg2s",
     "outputId": "0055c4e4-32ba-4970-dbe3-443ea3a620ae"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train Prediction Score 90.78233768364072\n",
-      "Test Prediction  87.33289592389075\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "knn_score_train = knn.score(X_train,y_train)\n",
     "print(\"Train Prediction Score\",knn_score_train*100)\n",
