--- a/dos results ver 2/8-fft-normal-n-0-3-5-7-8-10-12-15.ipynb
+++ b/dos results ver 2/8-fft-normal-n-0-3-5-7-8-10-12-15.ipynb
@@ -559,7 +559,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b31a5bdd08>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x28b8b211108>"
       ]
      },
      "execution_count": 6,
@@ -591,7 +591,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b31c63e408>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x28b8ec25688>"
       ]
      },
      "execution_count": 7,
@@ -623,7 +623,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b31c7d95c8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x28b8ed04048>"
       ]
      },
      "execution_count": 8,
@@ -655,7 +655,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b31c8a2648>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x28b8edc5bc8>"
       ]
      },
      "execution_count": 9,
@@ -687,7 +687,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b31c95b908>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x28b8ee76f48>"
       ]
      },
      "execution_count": 10,
@@ -719,7 +719,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2b31c998b88>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x28b8ee573c8>"
       ]
      },
      "execution_count": 11,
