--- a/puzzle/fft-r1-model.ipynb
+++ b/puzzle/fft-r1-model.ipynb
@@ -195,6 +195,405 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>misplaced tiles</th>\n",
+       "      <th>manhattan dist</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>21</td>\n",
+       "      <td>7</td>\n",
+       "      <td>48</td>\n",
+       "      <td>152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22</td>\n",
+       "      <td>7</td>\n",
+       "      <td>41</td>\n",
+       "      <td>164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>7</td>\n",
+       "      <td>47</td>\n",
+       "      <td>169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>24</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>7</td>\n",
+       "      <td>41</td>\n",
+       "      <td>167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>41</td>\n",
+       "      <td>166</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>27</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>28</td>\n",
+       "      <td>7</td>\n",
+       "      <td>49</td>\n",
+       "      <td>157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>29</td>\n",
+       "      <td>7</td>\n",
+       "      <td>43</td>\n",
+       "      <td>153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>8</td>\n",
+       "      <td>18</td>\n",
+       "      <td>139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>31</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>32</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>33</td>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>34</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14</td>\n",
+       "      <td>130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>21</td>\n",
+       "      <td>182</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>37</td>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>38</td>\n",
+       "      <td>8</td>\n",
+       "      <td>11</td>\n",
+       "      <td>110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>40</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>41</td>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>42</td>\n",
+       "      <td>9</td>\n",
+       "      <td>18</td>\n",
+       "      <td>154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>43</td>\n",
+       "      <td>9</td>\n",
+       "      <td>15</td>\n",
+       "      <td>189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>44</td>\n",
+       "      <td>9</td>\n",
+       "      <td>24</td>\n",
+       "      <td>162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>45</td>\n",
+       "      <td>9</td>\n",
+       "      <td>24</td>\n",
+       "      <td>163</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>46</td>\n",
+       "      <td>9</td>\n",
+       "      <td>23</td>\n",
+       "      <td>141</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>47</td>\n",
+       "      <td>9</td>\n",
+       "      <td>22</td>\n",
+       "      <td>157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>48</td>\n",
+       "      <td>9</td>\n",
+       "      <td>22</td>\n",
+       "      <td>194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>49</td>\n",
+       "      <td>9</td>\n",
+       "      <td>24</td>\n",
+       "      <td>181</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    n  misplaced tiles  manhattan dist\n",
+       "0   5                8               4\n",
+       "1   5                8               6\n",
+       "2   5                9              10\n",
+       "3   5                8               8\n",
+       "4   5                6               9\n",
+       "5   5               10              10\n",
+       "6   5                9               6\n",
+       "7   5                8              15\n",
+       "8   5                8              17\n",
+       "9   5                7              14\n",
+       "10  6                8              13\n",
+       "11  6                7              18\n",
+       "12  6                9              20\n",
+       "13  6                8              21\n",
+       "14  6                6              31\n",
+       "15  6                5              27\n",
+       "16  6               11              10\n",
+       "17  6                8              23\n",
+       "18  6                9              18\n",
+       "19  6                6              18\n",
+       "20  7               45             166\n",
+       "21  7               48             152\n",
+       "22  7               41             164\n",
+       "23  7               47             169\n",
+       "24  7               43             201\n",
+       "25  7               41             167\n",
+       "26  7               41             166\n",
+       "27  7               45             178\n",
+       "28  7               49             157\n",
+       "29  7               43             153\n",
+       "30  8               18             139\n",
+       "31  8               14             131\n",
+       "32  8               16             126\n",
+       "33  8               13             132\n",
+       "34  8               14             130\n",
+       "35  8               21             182\n",
+       "36  8               15             110\n",
+       "37  8               13             116\n",
+       "38  8               11             110\n",
+       "39  8                9             126\n",
+       "40  9               14             194\n",
+       "41  9               14             125\n",
+       "42  9               18             154\n",
+       "43  9               15             189\n",
+       "44  9               24             162\n",
+       "45  9               24             163\n",
+       "46  9               23             141\n",
+       "47  9               22             157\n",
+       "48  9               22             194\n",
+       "49  9               24             181"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
@@ -390,6 +789,201 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n</th>\n",
+       "      <th>mean_tiles</th>\n",
+       "      <th>mean_manhatan</th>\n",
+       "      <th>std_tiles</th>\n",
+       "      <th>std_manhatan</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8.12</td>\n",
+       "      <td>9.88</td>\n",
+       "      <td>1.081</td>\n",
+       "      <td>4.329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7.73</td>\n",
+       "      <td>19.89</td>\n",
+       "      <td>1.503</td>\n",
+       "      <td>6.306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>44.30</td>\n",
+       "      <td>167.30</td>\n",
+       "      <td>2.983</td>\n",
+       "      <td>14.190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>14.40</td>\n",
+       "      <td>130.20</td>\n",
+       "      <td>3.406</td>\n",
+       "      <td>20.596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20.00</td>\n",
+       "      <td>166.00</td>\n",
+       "      <td>4.295</td>\n",
+       "      <td>23.281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>17.80</td>\n",
+       "      <td>489.90</td>\n",
+       "      <td>5.514</td>\n",
+       "      <td>27.493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>11</td>\n",
+       "      <td>26.60</td>\n",
+       "      <td>966.00</td>\n",
+       "      <td>6.398</td>\n",
+       "      <td>45.609</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>26.20</td>\n",
+       "      <td>585.20</td>\n",
+       "      <td>5.827</td>\n",
+       "      <td>29.877</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>15.30</td>\n",
+       "      <td>618.00</td>\n",
+       "      <td>5.658</td>\n",
+       "      <td>38.338</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>14</td>\n",
+       "      <td>436.50</td>\n",
+       "      <td>4645.40</td>\n",
+       "      <td>53.244</td>\n",
+       "      <td>75.260</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>243.50</td>\n",
+       "      <td>7425.70</td>\n",
+       "      <td>59.219</td>\n",
+       "      <td>147.481</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>16</td>\n",
+       "      <td>28.40</td>\n",
+       "      <td>2890.00</td>\n",
+       "      <td>5.948</td>\n",
+       "      <td>59.996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>17</td>\n",
+       "      <td>273.20</td>\n",
+       "      <td>7431.40</td>\n",
+       "      <td>56.503</td>\n",
+       "      <td>207.137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
+       "      <td>121.10</td>\n",
+       "      <td>5848.50</td>\n",
+       "      <td>31.374</td>\n",
+       "      <td>148.017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>19</td>\n",
+       "      <td>31.10</td>\n",
+       "      <td>4793.30</td>\n",
+       "      <td>13.237</td>\n",
+       "      <td>92.713</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>18.20</td>\n",
+       "      <td>2923.90</td>\n",
+       "      <td>8.638</td>\n",
+       "      <td>53.919</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     n  mean_tiles  mean_manhatan  std_tiles  std_manhatan\n",
+       "0    5        8.12           9.88      1.081         4.329\n",
+       "1    6        7.73          19.89      1.503         6.306\n",
+       "2    7       44.30         167.30      2.983        14.190\n",
+       "3    8       14.40         130.20      3.406        20.596\n",
+       "4    9       20.00         166.00      4.295        23.281\n",
+       "5   10       17.80         489.90      5.514        27.493\n",
+       "6   11       26.60         966.00      6.398        45.609\n",
+       "7   12       26.20         585.20      5.827        29.877\n",
+       "8   13       15.30         618.00      5.658        38.338\n",
+       "9   14      436.50        4645.40     53.244        75.260\n",
+       "10  15      243.50        7425.70     59.219       147.481\n",
+       "11  16       28.40        2890.00      5.948        59.996\n",
+       "12  17      273.20        7431.40     56.503       207.137\n",
+       "13  18      121.10        5848.50     31.374       148.017\n",
+       "14  19       31.10        4793.30     13.237        92.713\n",
+       "15  20       18.20        2923.90      8.638        53.919"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfms.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -517,6 +1111,15 @@
     "ax.plot(x, y3, marker=\"o\")\n",
     "ax.plot(x, y4, marker=\"o\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfms1 = dfms.drop[]"
    ]
   }
  ],
